2013-09-22  Per Bothner  <per@bothner.com>

	* repl.java (processArgs): Fix handling of meta-arg "\" - don't
	process injected arguments, but instead adjust args array and
	continue.  This is more flexible, and simpler.

	* repl.java (processArgs): Update copyright year.

2013-09-18  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): Define "command-line-arguments".

2013-09-15  Per Bothner  <per@bothner.com>

	* standard/define_autoload.java (findAutoloadComments): Don't
	setProcedureDecl - it's not.
	(process): Update test for symbol.
	* lang/AutoloadProcedure.java (load): Invoke defineAll even if we
	find existing module instance.

2013-09-10  Per Bothner  <per@bothner.com>

	* standard/object.java (scanClassDef): Note that field value
	is unknown.  This fixes Savannah bug#39940
	"Class member of type <procedure> compilation exception".

2013-09-06  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): Various functions
	got moved to strings.scm.

	* standard/Scheme.java (initScheme): Add "digit-value",
	"get-environment-variable", and "get-environment-variables".

	* standard/Scheme.java (writeFormat, sharedWriteFormat,
	displayFormat): Removed fields, replaced by fields in DisplayFormat.
	* lang/SyntaxPattern.java:  Update accordingly.
	* lang/SyntaxRules.java:  Update accordingly.
	* lang/SyntaxTemplate.java:  Update accordingly.

2013-09-04  Per Bothner  <per@bothner.com>

	* lang/Quote.java (expand_pair): Check for null Translator argument.
	This fixes Savannah bug #39946 "NullPointerException when
	using syntax->datum".

	* repl.java (printOptions): Sort compilation options before printing.

	* repl.java (processArgs): Fix bug in handling of '--'.

2013-09-01  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): Fix 'u8-ready' to 'u8-ready?'.

2013-08-31  Per Bothner  <per@bothner.com>

	* standard/IfFeature.java (coreFeatures): New static field.
	(hasFeature): Use coreFeatures.